--- a/index.html
+++ b/index.html
@@ -23,5 +23,19 @@
       </ul>
     </div>
   </header>
+  <section>
+    <div>
+      <img src="bg5.png" alt="">
+    </div>
+    <div id="main">
+      <h1>FREE SUI EVERY HOUR!</h1>
+      <p>Earn money through Faucet, surveys, and exciting games. You can also refer players to receive generous commissions from us.</p>
+      <input placeholder="      E-mail Address" type="E-mail Address">
+      <div class="button">
+        <button class="button-1">Log in</button>
+        <button class="button-2">Sign up</button>
+      </div>
+    </div>
+  </section>
 </body>
 </html>
