--- a/index.html
+++ b/index.html
@@ -40,5 +40,37 @@
   <div id="Product">
     <h3>PRODUCT FEATURES</h3>
   </div>
+  <div class="container">
+    <div class="container-1">
+      <div>
+        <img src="time-is-money.svg" alt="">
+        <P>Just by solving captchas, you can earn free coin every hour.</P>
+      </div>
+      <h2>FREE SUI EVERY HOUR</h2>
+    </div>
+    <div class="container-2">
+      <div>
+        <img src="cashier-1.svg" alt="">
+        <P>Earn money from faucet, surveys and play other fun games at Suipick.io!</P>
+      </div>
+      <h2>PROVABLY FAIR GAMES</h2>
+    </div>
+  </div>
+  <div class="container">
+    <div class="container-1">
+      <div>
+        <img src="safebox-3.svg" alt="">
+        <P>Just by solving captchas, you can earn free coin every hour.</P>
+      </div>
+      <h2>FREE SUI EVERY HOUR</h2>
+    </div>
+    <div class="container-2">
+      <div>
+        <img src="presentation-19.svg" alt="">
+        <P>Earn money from faucet, surveys and play other fun games at Suipick.io!</P>
+      </div>
+      <h2>PROVABLY FAIR GAMES</h2>
+    </div>
+  </div>
 </body>
 </html>
